--- a/src/App.css
+++ b/src/App.css
@@ -68,9 +68,24 @@ h6 {
   margin: 0 0 5px 0;
 }
 
-.container {
+/*  Grid Fundamentals */
+/* .container {
   display: grid;
   grid-template-columns: 200px 500px;
-  grid-template-rows: 200px 100px 400px;
+  grid-template-rows: 60px 70px 200px;
   grid-gap: 20px;
+} */
+
+
+
+/* implicit-vs-explicit */
+
+.container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 200px 500px;
+  grid-template-rows: 50px 100px;
+  grid-auto-rows: 100px;
+  grid-auto-columns: 100px;
 }
+
