--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@ html {
   /* border-box box model allows us to add padding and border to our elements without increasing their size */
   box-sizing: border-box;
   /* A system font stack so things load nice and quick! */
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
   font-weight: 900;
   font-size: 10px;
   color: var(--black);
@@ -34,8 +34,7 @@ html {
 }
 
 body {
-  background-image: url("./assets/topography.svg"),
-    linear-gradient(110deg, #f93d66, #6d47d9);
+  background-image: url('./assets/topography.svg'), linear-gradient(110deg, #f93d66, #6d47d9);
   background-size: 340px, auto;
   min-height: calc(100vh - 100px);
   margin: 50px;
@@ -76,16 +75,13 @@ h6 {
   grid-gap: 20px;
 } */
 
-
-
 /* implicit-vs-explicit */
 
 .container {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 200px 500px;
-  grid-template-rows: 50px 100px;
+  grid-template-columns: 100px 300px 1fr;
+  grid-template-rows: 120px 80px;
   grid-auto-rows: 100px;
-  grid-auto-columns: 100px;
+  grid-auto-columns: 99px;
 }
-
