--- a/src/App.css
+++ b/src/App.css
@@ -77,11 +77,32 @@ h6 {
 
 /* implicit-vs-explicit */
 
-.container {
+/* .container {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 100px 300px 1fr;
   grid-template-rows: 120px 80px;
   grid-auto-rows: 100px;
   grid-auto-columns: 99px;
+} */
+
+/* grid auto flow explained*/
+
+/* .container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 100px 300px;
+  grid-auto-flow: dense;
+  grid-auto-columns: 199px; 
+  grid-template-rows: 120px 80px;
+} */
+
+/* sizing track in css grid*/
+
+.container {
+  display: grid;
+  grid-gap: 10px;
+  height: 500px;
+  border: 4px solid var(--yellow);
+  grid-template-columns: auto 1fr auto 2fr;
 }
