--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,6 @@ h6 {
 } */
 
 /* implicit-vs-explicit */
-
 /* .container {
   display: grid;
   grid-gap: 20px;
@@ -87,7 +86,6 @@ h6 {
 } */
 
 /* grid auto flow explained*/
-
 /* .container {
   display: grid;
   grid-gap: 20px;
@@ -98,11 +96,19 @@ h6 {
 } */
 
 /* sizing track in css grid*/
-
-.container {
+/* .container {
   display: grid;
   grid-gap: 10px;
   height: 500px;
   border: 4px solid var(--yellow);
   grid-template-columns: auto 1fr auto 2fr;
+} */
+
+/* Grid repeat function */
+.container {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns:
+    200px repeat(2, 1fr auto)
+    200px repeat(2, 3fr);
 }
