--- a/src/App.css
+++ b/src/App.css
@@ -105,10 +105,36 @@ h6 {
 } */
 
 /* Grid repeat function */
-.container {
+/* .container {
   display: grid;
   grid-gap: 10px;
   grid-template-columns:
     200px repeat(2, 1fr auto)
     200px repeat(2, 3fr);
+} */
+
+/* sizing grid items */
+/* .container {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.item8 {
+  background-color: mistyrose;
+  grid-column: span 6;
+  grid-row: span 2;
+} */
+
+/* placing grid items */
+.container {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.message {
+  background: #bada55;
+  grid-column: 1 / -3;
+  grid-row: 2 / span 4;
 }
