--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ h6 {
 } */
 
 /* auto fit auto fill */
-.container {
+/* .container {
   display: grid;
   grid-gap: 10px;
   border: 1px solid var(--yellow);
@@ -149,4 +149,13 @@ h6 {
 .item20 {
   grid-column-end: -1;
   background-color: aliceblue;
+} */
+
+/* Using minmax() for Responsive Grids */
+.container {
+  display: grid;
+  grid-gap: 10px;
+  border: 5px solid blanchedalmond;
+
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
