--- a/src/App.css
+++ b/src/App.css
@@ -161,7 +161,7 @@ h6 {
 } */
 
 /* grid template area */
-.container {
+/* .container {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 500px 1fr;
@@ -171,8 +171,8 @@ h6 {
     'sidebar-1  content  sidebar-2'
     'sidebar-1  content  sidebar-2'
     'footer     footer   footer';
-}
-
+} */
+/* 
 .footer {
   grid-area: footer;
 }
@@ -194,4 +194,19 @@ h6 {
       'sidebar-1  sidebar-1  sidebar-1'
       'footer     footer   footer';
   }
+} */
+
+/* Naming Lines in CSS Grid */
+
+.container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: [site-left]1fr [content-start]500px [content-end]1fr [site-right];
+  grid-template-rows: [content-top]repeat(10, auto) [content-bottom];
+}
+
+.item3 {
+  background-color: salmon;
+  grid-column: content-start;
+  grid-row: content-top/content-bottom;
 }
