--- a/src/App.css
+++ b/src/App.css
@@ -198,7 +198,7 @@ h6 {
 
 /* Naming Lines in CSS Grid */
 
-.container {
+/* .container {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: [site-left]1fr [content-start]500px [content-end]1fr [site-right];
@@ -209,4 +209,35 @@ h6 {
   background-color: salmon;
   grid-column: content-start;
   grid-row: content-top/content-bottom;
+} */
+
+/* grid-auto-flow dense Block Fitting*/
+
+.container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(10, 1fr);
+  grid-auto-flow: dense;
+}
+
+.item:nth-child(6n) {
+  background-color: var(--black);
+  color: aliceblue;
+  grid-column: span 6;
+}
+
+.item:nth-child(8n) {
+  background-color: cadetblue;
+  grid-column: span 2;
+}
+
+.item:nth-child(9n) {
+  background-color: rgb(158, 157, 242);
+  color: var(--black);
+  grid-row: span 2;
+}
+
+.item18 {
+  background-color: green !important;
+  grid-column-end: -1 !important;
 }
